content/manual/v8.0/source/includes/changelogs/releases/8.0.30.rst
.. _8.0.30-changelog:

8.0.30 Changelog
----------------

Sharding
~~~~~~~~

:issue:`SERVER-110952` Creation of untracked legacy timeseries
collection may release DDL lock mid-creation due to unknown shard
version

Storage
~~~~~~~


WiredTiger
``````````

- :issue:`WT-16453` Add stat for cache tolerance
- :issue:`WT-16504` RTS does not roll back clean in-memory pages with
  unstable updates
- :issue:`WT-16612` Fix the error for update calculation in
  __evict_is_session_cache_trigger_tolerant
- :issue:`WT-16959` Invalid access at address in __wt_ref_addr_copy
- :issue:`WT-17598` Batch per-update cache atomics in
  __wti_page_inmem_updates

Operations
~~~~~~~~~~

- :issue:`WT-15888` Increase verbosity of the proxy cell selected with
  child original assertion failure
- :issue:`WT-17183` test_prepare20 fails due to corrupted logs

Build and Packaging
~~~~~~~~~~~~~~~~~~~

- :issue:`SERVER-132763` Bump pinned jstestfuzz rev past package-lock
  artifactory fix
- :issue:`SERVER-133234` Retry URL lookup in debugsymb_mapper when
  artifacts are not yet visible
- :issue:`SERVER-133242` Retry Packages artifact lookup in package_test
  against Evergreen secondary lag (BF-45409)

Internals
~~~~~~~~~

- :issue:`SERVER-81092` Include collection namespace in balancer warning
  logs
- :issue:`SERVER-90889` Check timeseries collections throught the
  checkMetadataConsistency command
- :issue:`SERVER-108215` Impose limits on the number of active
  multi-document transactions
- :issue:`SERVER-112599` Introduce server status metrics to track user
  commands targeting system buckets collections
- :issue:`SERVER-112678` Avoid unnecessary shared lock acquisition on
  timeseries in checkMetadataConsistency
- :issue:`SERVER-117823` Add new queryable encryption metrics for
  insert, find, update, and delete
- :issue:`SERVER-120949` Remove Tag Based FCV Generation
- :issue:`SERVER-121111` Add Logs for fragility in the transaction
  coordinator
- :issue:`SERVER-124981` Do not log isEligibleSyncSource logs on
  arbiters
- :issue:`SERVER-125742` Remove the graceful exit for kernel version
  7.0.14 and above
- :issue:`SERVER-125978` Initializing FCV fails if any collections in
  the admin database have incomplete foreground index builds
- :issue:`SERVER-126186` Add serverStatus section for search stats
- :issue:`SERVER-126383` Pull early exit for shard registry periodic
  reloader up into sharding initialization
- :issue:`SERVER-126784` Enable Remote Asset API External Artifact
  Caching for Releases
- :issue:`SERVER-126962` Remove unused push flags from
  enterprise-rhel-8-64-bit dev variant
- :issue:`SERVER-127946` Renew all test certs for 7.x, 8.x, and 9.x
- :issue:`SERVER-128355` Add appName and driverName to system.buckets
  metric command log (ID 11259900)
- :issue:`SERVER-128481` Backport fixes for SBE memory bugs exposed in
  RAII project
- :issue:`SERVER-130401` Bump timeout for query_plan_cache_fuzzer on
  debug TSAN build
- :issue:`SERVER-130420` Fragile BEP extraction logic causes
  test_packages failures in server release builds
- :issue:`SERVER-131073` Query stats key for $searchMeta on mongos fails
  re-parse on $searchMeta.limit
- :issue:`SERVER-131378` Remove references to ubi8 distro from project
  settings to unblock Evergreen deletion
- :issue:`SERVER-131865` Add clone_collection_as_capped.js to
  backports_required_for_multiversion_tests.yml
- :issue:`SERVER-131925` fix v4 toolchain issues on 8.0 branch
- :issue:`SERVER-132246` minWaitForStreamingHelloMillis default breaks
  spec-compliant drivers
- :issue:`SERVER-132748` [v8.0] Prevent
  write_command_duplicate_stmt_ids_validation.js from running on 8.0
  multiversion suites
- :issue:`SERVER-133047` Introduce step to bump MONGO_VERSION file after
  each server release
- :issue:`SERVER-133064` Make mutex types observable
- :issue:`WT-12765` test_txn24.py has ROLLBACK failures on Mac and
  Windows

